# constitution-base-OCR-eleves

./: .gitignore  README.md  pyproject.toml
src/scoledit/: __main__.py  annotator.py  annotator_cli.py  config.py  consignes.py  consignes_cli.py  models.py  pipeline.py  scorer.py  scorer_cli.py  scraper.py  storage.py
tests/: test_consignes.py  test_scorer.py
