[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scoledit-scraper"
version = "0.1.0"
description = "Scrape SCOLEDIT corpus scans and upload to S3"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "boto3>=1.34",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "pyspellchecker>=0.8",
    "tqdm>=4.66",
]

[project.scripts]
scoledit-scraper = "scoledit.__main__:main"
scoledit-annotator = "scoledit.annotator_cli:main"
scoledit-scorer = "scoledit.scorer_cli:main"
scoledit-consignes = "scoledit.consignes_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scoledit"]
